New picture added to the website

--- a/portfoliowebsite/index.html
+++ b/portfoliowebsite/index.html
@@ -140,8 +140,8 @@
 
     <!-- Left Side - Profile Photo, Description, and Links -->
     <div id="left-side">
-        <a href="#" class="image avatar"><img src="https://profilepicture-ghanashyam.s3.ap-south-1.amazonaws.com/profile.jpeg" alt="Profile Picture?" /></a>
-        <h1><strong>Ghanashyam R trial 3</strong></h1>
+        <a href="#" class="image avatar"><img src="profile.jpeg" alt="Profile Picture?" /></a>
+        <h1><strong>Ghanashyam R trial </strong></h1>
         <p>Dual degree student pursuing BS in Data Science & Applications and BTech in Electrical & Electronics Engineering with a robust programming foundation, seeking opportunities to contribute technical expertise and collaborate on impactful projects in the IT industry.
         </p>
         
