--- a/portfoliowebsite/index.html
+++ b/portfoliowebsite/index.html
@@ -30,7 +30,7 @@
         </header>
         <p>
             Programming and Web Development: Java, Python, C, SQLite, Flask, HTML/CSS, Bootstrap<br>
-            Cloud and Infrastructure: AWS, Linux/Unix<br>
+            Cloud and Infrastructure: AWS,Linux/Unix,Terraform<br>
             Simulation and Modeling: Matlab-Simscape, Simulink
         </p>
     </section>
@@ -50,7 +50,7 @@
         </div>
         <ul class="actions">
             <li><a href="#" class="button">Full Portfolio</a></li>
-
+            
         </ul>
 		
     </section>
