--- a/portfoliowebsite/index.html
+++ b/portfoliowebsite/index.html
@@ -213,17 +213,6 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Bootstrap</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
                   <h3>DBMS,SQL</h3>
                   <p>Intermediate</p>
                 </div>
@@ -292,6 +281,68 @@
         onclick="location.href='./#projects'"
       />
     </section>
+    </section>
+    
+    <section id="projects">
+      <p class="section__text__p1">Browse My Recent</p>
+      <h1 class="title">Projects</h1>
+      <div class="experience-details-container">
+      <div class="about-containers">
+        <div class="details-container color-container">
+        <div class="article-container">
+          <img
+          src="./assets/grocery.png"
+          alt="Project 1"
+          class="project-img"
+          />
+        </div>
+        <h2 class="experience-sub-title project-title">Grocery Store Web Application
+        </h2>
+        <p>Created a fully functional multi-user e-commerce app facilitates grocery shopping with efficient product management.
+        </p>
+        <br />
+        <div class="btn-container">
+          <button
+          class="btn btn-color-2 project-btn"
+          onclick="location.href='https://github.com/ghanashyam-r/grocerystore_flask'"
+          >
+          Github
+          </button>
+          <button
+          class="btn btn-color-2 project-btn"
+          onclick="location.href='https://www.linkedin.com/posts/ghanashyam-r-_flask-webdevelopment-mad1course-activity-7112738720822284288-GMiU?utm_source=share&utm_medium=member_desktop_web'"
+          >
+          Live Demo
+          </button>
+        </div>
+        </div>
+        <div class="details-container color-container">
+        <div class="article-container">
+          <img
+          src="./assets/project-2.png"
+          alt="Project 2"
+          class="project-img"
+          />
+        </div>
+        <h2 class="experience-sub-title project-title">Project Two</h2>
+        <div class="btn-container">
+          <button
+          class="btn btn-color-2 project-btn"
+          onclick="location.href='https://github.com/'"
+          >
+          Github
+          </button>
+          <button
+          class="btn btn-color-2 project-btn"
+          onclick="location.href='https://github.com/'"
+          >
+          Live Demo
+          </button>
+        </div>
+        </div>
+        <div class="details-container color-container">
+        <div class="article-container">
+  </html>
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
