--- a/portfoliowebsite/index.html
+++ b/portfoliowebsite/index.html
@@ -319,16 +319,17 @@
         <div class="details-container color-container">
         <div class="article-container">
           <img
-          src="./assets/project-2.png"
+          src="./assets/portfolioposter.png"
           alt="Project 2"
           class="project-img"
           />
         </div>
-        <h2 class="experience-sub-title project-title">Project Two</h2>
+        <h2 class="experience-sub-title project-title">Cloud Resume Challenge</h2>
+        <p>Developed an engaging portfolio website as part of the Cloud Resume Challenge with secure deployment, API creation and established a seamless CICD pipeline.</p>
         <div class="btn-container">
           <button
           class="btn btn-color-2 project-btn"
-          onclick="location.href='https://github.com/'"
+          onclick="location.href='https://github.com/ghanashyam-r/aws-CloudResumeChallenge'"
           >
           Github
           </button>
@@ -336,12 +337,46 @@
           class="btn btn-color-2 project-btn"
           onclick="location.href='https://github.com/'"
           >
-          Live Demo
+          Blog Post
           </button>
         </div>
         </div>
         <div class="details-container color-container">
-        <div class="article-container">
+          <div class="article-container">
+            <img
+            src="./assets/CLoudnativekube.png"
+            alt="Project 1"
+            class="project-img"
+            />
+          </div>
+          <h2 class="experience-sub-title project-title">Cloud Native Monitoring Application on Kubernetes 
+
+          </h2>
+          <p>Built a complete cloud monitoring system from start to finish, making sure we can track resources in real-time and easily scale the system for efficient management. 
+          </p>
+          <br />
+          <div class="btn-container">
+            
+          </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+              src="./assets/movierecommendationposter.png"
+              alt="Project 1"
+              class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Movie Recommendation System
+            </h2>
+            <p>Developed a Movie Recommednation System using Machine Learning techniques such as cosine similarity, TF-IDF vectorization.
+            </p>
+            <br />
+            <div class="btn-container">
+              
+            </div>
+            </div>
+          </section>
   </html>
 
     <section id="contact">
