--- a/portfoliowebsite/index.html
+++ b/portfoliowebsite/index.html
@@ -85,7 +85,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>2020-2024<br />Btech-Electrical and Electronics</p>
+              <p>2020-2024<br />Btech-Electrical and Electronics<br />Minor in Machine Learning</p>
             </div>
             <div class="details-container">
               <img
