--- a/portfoliowebsite/index.html
+++ b/portfoliowebsite/index.html
@@ -335,7 +335,7 @@
           </button>
           <button
           class="btn btn-color-2 project-btn"
-          onclick="location.href='https://github.com/'"
+          onclick="location.href='https://ghanashyam.hashnode.dev/cloud-resume-challenge'"
           >
           Blog Post
           </button>
@@ -411,7 +411,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">gshyamsr@gmail.com</a></p>
+          <p><a href="mailto:gshyamsr@gmail.com">gshyamsr@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
