--- a/portfoliowebsite/index.html
+++ b/portfoliowebsite/index.html
@@ -29,7 +29,7 @@
           <span></span>
         </div>
         <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">About Me!</a></li>
+          <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#experience" onclick="toggleMenu()">Skills</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
@@ -85,7 +85,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>2020-2024<br />Btech-Electrical and Electronics<br />Minor in Machine Learning</p>
+              <p>2020-2024<br />Btech-Electrical and Electronics<br />with Minor in Machine Learning</p>
             </div>
             <div class="details-container">
               <img
