--- a/portfoliowebsite/index.html
+++ b/portfoliowebsite/index.html
@@ -7,6 +7,12 @@
     <title>Ghanashyam R</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <style>
+      .section__pic-container img {
+        /* Adjust this value to move the image left */
+        margin-left: -150px; /* You can use negative values to move left */
+      }
+    </style>
   </head>
   <body>
     <nav id="desktop-nav">
@@ -38,7 +44,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="profile.png" alt="Ghanashyam R profile picture" />
+        <img src="Transparent.png" alt="Ghanashyam R profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -94,15 +100,12 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>BS in Data Science and Programming(2021-Present)<br />Diploma Stage</p>
+              <p>BS in Data Science and Programming(2021-Present)<br />Degree Stage</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-                Dual degree student pursuing BS in Data Science & Applications and BTech in Electrical & Electronics Engineering with
-                a robust programming foundation, seeking opportunities to contribute technical expertise and collaborate on
-                impactful projects in the Tech industry. I am a passionate, hardworking individual who strives for excellence and
-                possesses a team-oriented personality.
+              Electrical and Electronics Engineering Graduate from Government Engineering College,pursuing BS in Data Science & Applications from IIT Madras.I have a robust programming foundation, seeking opportunities to contribute technical expertise and collaborate on impactful projects in the Tech industry. I am a passionate, hardworking individual who strives for excellence and possesses a team-oriented personality.
             </p>
           </div>
         </div>
@@ -161,6 +164,57 @@
           </div>
           <div class="details-container">
             <h2 class="experience-sub-title">Web Development</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Vue.js</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Flask</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>HTML/CSS</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>DBMS,SQL</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">Machine Learning and Data Analysis</h2>
             <div class="article-container">
               <article>
                 <img
