--- a/portfoliowebsite/index.html
+++ b/portfoliowebsite/index.html
@@ -223,7 +223,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Vue.js</h3>
+                  <h3>Data Preprocessing</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -234,7 +234,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Javascript</h3>
+                  <h3>Feature Engineering</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -245,7 +245,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Flask</h3>
+                  <h3>XGBoost Classifier</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -256,8 +256,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML/CSS</h3>
-                  <p>Intermediate</p>
+                  <h3>Logistic Regression</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -267,8 +267,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>DBMS,SQL</h3>
-                  <p>Intermediate</p>
+                  <h3>Random Forest</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               
